# waygui

./: .gitignore  CMakeLists.txt  README.md
examples/: demo.c
python/: README.md  client.py  helpers.py  primitives.py  protocol.py  scanner.py  wire.py  wl_primitives.py  wl_util.py
python/wayland/: __init__.py  client_core.py  protocol.py  scanner.py
python/wayland/protocols/: wayland.py  xdg_decoration_unstable_v1.py  xdg_shell.py
waygui/: helpers.c  helpers.h  waygui.c  waygui.h  wire.c  wire.h
